refactor: Cafe shuffle 로직 추상화