@@ -1,5 +1,6 @@
 package com.project.yozmcafe.service;
 
+import com.project.yozmcafe.domain.RandomCafeShuffleStrategy;
 import com.project.yozmcafe.domain.cafe.Cafe;
 import com.project.yozmcafe.domain.cafe.CafeRepository;
 import com.project.yozmcafe.domain.cafe.UnViewedCafeRepository;
@@ -14,7 +15,6 @@ import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabas
 import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabase.Replace;
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -36,7 +36,7 @@ class UnViewedCafeServiceTest {
 
     @BeforeEach
     void setUp() {
-        unViewedCafeService = new UnViewedCafeService(unViewedCafeRepository, cafeRepository);
+        unViewedCafeService = new UnViewedCafeService(unViewedCafeRepository, cafeRepository, new RandomCafeShuffleStrategy());
     }
 
     @Test
@@ -46,7 +46,7 @@ class UnViewedCafeServiceTest {
         final Member member = memberRepository.save(new Member("1", "폴로", "폴로사진"));
         final Cafe cafe1 = cafeRepository.save(Fixture.getCafe("카페1", "주소1", 3));
         final Cafe cafe2 = cafeRepository.save(Fixture.getCafe("카페2", "주소2", 4));
-        member.addUnViewedCafesWithShuffle(Arrays.asList(cafe1, cafe2));
+        member.addUnViewedCafes(List.of(cafe1, cafe2));
 
         //when
         unViewedCafeService.removeUnViewedCafe(member, cafe1.getId());
@@ -63,7 +63,7 @@ class UnViewedCafeServiceTest {
         final Cafe cafe1 = cafeRepository.save(Fixture.getCafe("카페1", "주소1", 3));
         final Cafe cafe2 = cafeRepository.save(Fixture.getCafe("카페2", "주소2", 4));
         final Cafe cafe3 = cafeRepository.save(Fixture.getCafe("카페3", "주소3", 5));
-        member.addUnViewedCafesWithShuffle(List.of(cafe1));
+        member.addUnViewedCafes(List.of(cafe1));
 
         //when
         unViewedCafeService.removeUnViewedCafe(member, cafe1.getId());
